fe: fevicon and othe fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link
 			rel="shortcut icon"
-			href="./src/assets/images/KiranPics/fevicons/kiran1png.png"
+			href="./src/assets/images/KiranPics/fevicons/kiranFevicon.jpg"
 			type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Kiran's PortFolio</title>
